i have updated the message in the "About section i have fixed the image not showing problem

--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,10 @@ button:hover{
     transform: scale(1.1);
 
 }
+
+
+.img{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+}
